--- a/VRChat/16/918516.html
+++ b/VRChat/16/918516.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hIsoo7z41Kbln+pbcQ2JrTFpMib4/s50dBhKFhO19mA="></script>
+    "+aAl4CPWheT3YOCrssg2W1q2mX9rxIT4mbsx7XcibJo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"眼鏡force腕章","description":"VRchat向け\n眼鏡forceの腕章\n無料にて配布中","url":"https://booth.pm/ja/items/918516","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/918516/a5186546-b6d2-4fd9-a509-83224533a94c_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hIsoo7z41Kbln+pbcQ2JrTFpMib4/s50dBhKFhO19mA="></script>
+    nonce="+aAl4CPWheT3YOCrssg2W1q2mX9rxIT4mbsx7XcibJo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/918516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               91
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/918516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               91
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
