--- a/VRChat/48/914748.html
+++ b/VRChat/48/914748.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qfgIZyQAgJp9uYOhe1hIExnDHisDsMD97vSpfOHvp80="></script>
+    "y0yi64SOHaqQdOOjcbHEMS0MMCAIKN6gAg8v+xt/Wo0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ナイトウォッチ","description":"販売用3Dモデル第一弾　スーツ姿の女性サイボーグ\n「量産型汎用義体壱号機 \"NightWatch\"」です。\nVRCアバターとかゲームとかに使ってあげてください。\n\nこのモデルは以下の用途において自由に利用することが出来ます\n・ゲーム制作\n・VRchat用アバターあるいはワールド\n・映像制作\n・Vtuber\n(上記以外の用途での利用については一度ご連絡ください)\n\n以下の行為は許可します\n・モデルの改造\n・商用利用\n・R18(G)コンテンツでの利用\n\n\n以下の行為は禁止します\n・ゲームや映像作品を通さないこのモデルの二次配布\n・特定個人や団体への中傷を目的とした利用\n・アバターペデスタルによる配布(本モデルのパーツを流用したものを含む)\n\n\n以下の行為は必須ではありませんが、やってくれるとありがたいです\n・クレジット表記\n・動画, ゲーム等のコンテンツ制作時の使用報告\n\n\n質問や何かしら問題がありましたら、Twitter等にお問い合わせください\n(@yosohuta)","url":"https://booth.pm/ja/items/914748","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/914748/b1fa86c4-2bf3-4f78-8c7c-fd29a1d6c2b4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qfgIZyQAgJp9uYOhe1hIExnDHisDsMD97vSpfOHvp80="></script>
+    nonce="y0yi64SOHaqQdOOjcbHEMS0MMCAIKN6gAg8v+xt/Wo0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/914748/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               228
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/914748/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               228
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
