--- a/VRChat/91/1340891.html
+++ b/VRChat/91/1340891.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AgGOXJ4HuE+eh4egpg/Hd587b985Cda2Su8v4eL5Lms="></script>
+    "IFE45CWnIV9f8VkRqQBT8UgiSiYX80EBtP9ZKLCGAlQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"異素材ウェッジソールサンダル VRoid texture【正式版対応】","description":"◆VRoid Studio正式版との互換性を確認済です◆\nThe compatibility with the official version of VRoid Studio has been confirmed.\n\nどんな服にも合わせやすい、コルクと革の異素材テクスチャのサンダルです。\n遊び心でキリン柄を加えてみました。","url":"https://booth.pm/ja/items/1340891","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d7b53162-9fa2-4856-b18d-81e9400489ed/i/1340891/a00098e8-c872-44aa-a6b1-10b0415bbd84_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AgGOXJ4HuE+eh4egpg/Hd587b985Cda2Su8v4eL5Lms="></script>
+    nonce="IFE45CWnIV9f8VkRqQBT8UgiSiYX80EBtP9ZKLCGAlQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1340891/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1340891/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
