--- a/VRChat/77/1340777.html
+++ b/VRChat/77/1340777.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wC+JBSyR54oI7sMhK8H4b5FlBy8/OtOUIYUNWXWIKyQ="></script>
+    "ks1qZ9CJ9ZMUVz9e0EGuZ4jl+01/jbleBFKRvPjnTRA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"よくわからん台","description":"なんかの台\n部屋にあったテレビ台を真似してみた\n\n\n\n当モデルの再配布等はご遠慮ください\n","url":"https://booth.pm/ja/items/1340777","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b7bbd1bc-d0b4-4359-a269-736fd038db0d/i/1340777/922bc3f9-c708-4e38-862b-266cae273700_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wC+JBSyR54oI7sMhK8H4b5FlBy8/OtOUIYUNWXWIKyQ="></script>
+    nonce="ks1qZ9CJ9ZMUVz9e0EGuZ4jl+01/jbleBFKRvPjnTRA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1340777/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1340777/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
